src/test/ui/borrowck/move-in-pattern.stderr
error[E0382]: use of moved value: `s`
  --> $DIR/move-in-pattern.rs:12:9
   |
LL |     if let Some(x) = s {
   |                 - value moved here
...
LL |     foo(s);
   |         ^ value used here after partial move
   |
   = note: move occurs because value has type `S`, which does not implement the `Copy` trait
help: borrow this field in the pattern to avoid moving `s.0`
   |
LL |     if let Some(ref x) = s {
   |                 ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
